gcc/testsuite/rust/rustc/ui/parser/bounds-lifetime-where-1.rs
type A where 'a; // { dg-error "" "" { target *-*-* } }

fn main() {}

